# hicolor-icon-theme

./: .gitlab-ci.yml  Makefile.am  NEWS  README  README.md  RELEASE  meson.build  validate.py
spec/: icon-naming-spec.xml  icon-theme-spec.xml
